Progetto aggiornato senza errori