@@ -1,15 +1,14 @@
 import java.util.*;
-import java.util.stream.Collectors;
 
 class Warehouse {
-    private List<Product> scaffoldItems = new ArrayList<>();
+    private final List<Product> scaffoldItems = new ArrayList<>();
 
     public Warehouse() {
         this.scaffoldItems.addAll(getInventory());
     }
 
     public void addQuantityProduct(Product product, int quantityToAdd) {
-        Product productToUodate = scaffoldItems.stream().filter(productToCheck -> productToCheck == product).collect(Collectors.toList()).getFirst();
+        Product productToUodate = scaffoldItems.stream().filter(productToCheck -> productToCheck == product).toList().getFirst();
         scaffoldItems.remove(productToUodate);
         productToUodate.setQuantity(productToUodate.getQuantity()+quantityToAdd);
         scaffoldItems.add(productToUodate);
@@ -20,8 +19,8 @@ class Warehouse {
 
 
 
-    public Boolean removeProduct(int deviceToRemove) {
-        return scaffoldItems.removeIf(device -> device.getProductId() == deviceToRemove);
+    public void removeProduct(int deviceToRemove) {
+        scaffoldItems.removeIf(device -> device.getProductId() == deviceToRemove);
     }
 
     public List<Product> getInventory() {
